--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,6 +15,7 @@ header {
 	position: fixed;
 	width: 100%;
 	z-index: 1;
+	background-color: white;
 }
 
 header nav {
@@ -44,4 +45,61 @@ nav span {
 
 .container {
 	padding-top: 80px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.first-column {
+	display: flex;
+	flex-wrap: wrap;
+	width: 630px;
+	border: 1px solid black;
+}
+
+.second-column {
+	display: flex;
+	flex-wrap: wrap;
+	width: 	300px;
+	border: 2px solid red;
+}
+
+.third-column {
+	display: flex;
+	flex-wrap: wrap;
+	width: 	240px;
+	border: 2px solid blue;
+}
+
+.title-img {
+	font-family: Georgia;
+	font-weight: bold;
+	font-size: 30px;
+	color: white;
+	align-self: center;
+}
+
+.bg-title {
+	background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+	background-repeat: no-repeat;
+	height: 300px;
+	display: flex;
+}
+
+.bg-title2 {
+	background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+	height: 300px;
+	display: flex;
+}
+
+.bg-title3 {
+	height: 300px;
+	background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+	display: flex;
+}
+
+.bg-title4 {
+	height: 300px;
+	background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+	background-repeat: no-repeat;
+	display: flex;
 }
