--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -128,11 +128,41 @@ nav span {
 	font-weight: bold;
 }
 
-.list ul {
+.bites h2 {
+	text-align: center;
+}
+
+.list {
 	background-color: whitesmoke;
 	font-family: Verdana;
 	font-size: 12px;
 	color: DimGray;
-	border-bottom: 1px solid black;
 	list-style: none;
+}
+
+.footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: auto;
+	background-color: MediumAquamarine;
+	font-family: Verdana;
+	font-size: 12px;
+	height: 325px;
+}
+
+footer .title {
+	display: inline-block;
+	border-right: 2px solid white;
+	padding-right: 25px;
+	font-family: Georgia;
+	color: white;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+footer nav {
+	display: inline-block;
+	padding: 20px 10px;
 }
